第三周與第四周作業

--- a/page1.html
+++ b/page1.html
@@ -100,11 +100,11 @@
         <div class="footer-header d-flex">
             <div class="footer-menu d-flex">
             <ul class="d-flex">
-                <li>首頁</li>
-                <li>系列鏡框</li>
-                <li>門市據點</li>
-                <li>部落格</li>
-                <li>常見問題</li>
+                <li><a href="#" class="color-white">首頁</a></li>
+                <li><a href="#" class="color-white">系列鏡框</a></li>
+                <li><a href="#" class="color-white">門市據點</a></li>
+                <li><a href="#" class="color-white">部落格</a></li>
+                <li><a href="page1.html" class="color-white">常見問題</a></li>
             </ul>
             <div class="footer-socialMedia d-flex">
                 <a href="#"><img src="assets/img/ic_social_fb.svg" alt=""></a>
