第三周與第四周建議修改版

--- a/index.html
+++ b/index.html
@@ -191,18 +191,18 @@
     <section class="footer-contain">
         <div class="footer-header d-flex">
             <div class="footer-menu d-flex">
-            <ul class="d-flex">
+            <ul class="footer-menu-title d-flex">
                 <li><a href="#" class="color-white">首頁</a></li>
                 <li><a href="#" class="color-white">系列鏡框</a></li>
                 <li><a href="#" class="color-white">門市據點</a></li>
                 <li><a href="#" class="color-white">部落格</a></li>
                 <li><a href="page1.html" class="color-white">常見問題</a></li>
             </ul>
-            <div class="footer-socialMedia d-flex">
-                <a href="#"><img src="assets/img/ic_social_fb.svg" alt=""></a>
-                <a href="#"><img src="assets/img/ic_social_ig.svg" alt=""></a>
-                <a href="#"><img src="assets/img/ic_social_line.svg" alt=""></a>
-            </div>
+            <ul class="footer-socialMedia d-flex">
+                <li><a href="#"><img src="assets/img/ic_social_fb.svg" alt=""></a></li>
+                <li><a href="#"><img src="assets/img/ic_social_ig.svg" alt=""></a></li>
+                <li><a href="#"><img src="assets/img/ic_social_line.svg" alt=""></a></li>
+            </ul>
         </div>
         <ul class="footer-information">
             <li class="d-flex"><img src="assets/img/ic_phone_48px.svg" alt="">0800-000-000</li>
@@ -212,10 +212,13 @@
         <div class="footer-link">
         </div>
         <div class="footer-copyright d-flex">
-            <a href=""><img src="assets/img/logo-new1.png" alt=""></a>
+            <div class="footer-copyright-content d-flex align-item-center">
+            <a href="#" class="footer-copyright-img"><img src="assets/img/logo-new1.png" alt=""></a>
+            <p>Copyright © 2020 Glasses.All rights reserved.</p>
+            </div>
             <div class="copy-text d-flex">
-                <p>Copyright © 2020 Glasses.All rights reserved.</p>
                 <ul class="d-flex">
+                    <li>Copyright © 2020 Glasses.All rights reserved.</li>
                     <li>隱私權政策</li>
                     <li>服務條款</li>
                 </ul>
